src/components/scroll-effects-control/editor.scss
.maxi-scroll-effects-control {
	.maxi-base-control {
		flex: 1;
		&__help {
			color: #999;
			font-size: 12px;
		}
		.maxi-tabs-control__button {
			&:not(.maxi-tabs-control__button-rotate) {
				svg {
					path {
						stroke: var(--maxi-grey-11-color);
						fill: var(--maxi-grey-11-color);
					}
				}
			}
			&-rotate {
				svg {
					path {
						fill: var(--maxi-grey-11-color);
					}
				}
			}
			&-blur {
				svg {
					stroke: var(--maxi-grey-11-color);
				}
			}
			&--selected:not(.maxi-tabs-control__button-rotate) {
				svg {
					path {
						stroke: var(--maxi-secondary-color);
					}
				}
			}
			&-rotate {
				&.maxi-tabs-control__button--selected {
					svg {
						path {
							fill: var(--maxi-secondary-color);
						}
					}
				}
			}
			&-blur {
				&.maxi-tabs-control__button--selected {
					svg {
						stroke: var(--maxi-secondary-color);
					}
				}
			}
		}
		.maxi-tabs-control__button {
			padding: 8.5px;
			margin-right: 5px;
			border: 1.5px solid var(--maxi-grey-1-color);
			border-radius: 4px;
			&:last-child {
				margin-right: 0;
			}
		}

		.maxi-tabs-control__button[aria-pressed='true'] {
			background-color: var(--maxi-light-blue-2-color) !important;
			border-color: var(--maxi-light-blue-2-color) !important;
		}
		.maxi-tabs-control__button svg:not(.maxi-tabs-control__notification) {
			height: 100%;
			margin: 0;
			fill: var(--maxi-secondary-color) !important;
		}
	}
	.maxi-scroll-unique-control {
		margin: 40px 0;

		&__slider-wrapper {
			position: relative;
		}

		.maxi-scroll-unique-control-slider {
			width: 2px;
			height: 400px;
			background-color: var(--maxi-light-blue-2-color) !important;
			border-radius: 5px;
			padding: 20px 0;
			margin: 0 20px;

			&__thumb {
				width: 30px;
				height: 30px;
				line-height: 30px;
				background-color: var(--maxi-light-blue-1-color);
				border: 1.5px solid #fff;
				border-radius: 50%;
				color: #fff;
				display: flex;
				align-items: center;
				justify-content: center;
				cursor: grab;
				outline: none;
				box-shadow: 0 2px 6px var(--maxi-light-blue-2-color) !important;
				transition: transform 0.1s ease;
				transform: translateX(-50%);
				padding: 20px !important;

				&--selected {
					background-color: #119da4;
					color: white !important;
					font-weight: bold !important;
				}

				&-label-wrapper {
					position: absolute;
					display: flex;
					align-items: center;
					justify-content: space-between;
					gap: 8px;
					left: 50px;
					white-space: nowrap;
					background-color: aliceblue;
					padding: 4px 20px;
					border-radius: 20px;
					font-size: 0.8em;
					width: 200px;
				}

				&-label-delete {
					display: flex;
					cursor: pointer;
				}
			}

			&__divider {
				position: absolute;
				width: 100%;
				height: 2px;
				background-color: #000;
				top: 50%;
				transform: translateY(-50%);
			}

			&__add-button {
				position: absolute;
				left: 10px; /* Adjust as necessary */
				transform: translateY(-50%);
				background-color: #007cba;
				color: white;
				width: 25px;
				height: 25px;
				line-height: 25px;
				text-align: center;
				border-radius: 50%;
				font-size: 16px;
				user-select: none;
			}
		}

		.maxi-settingstab-control {
			.maxi-tabs-control {
				margin-left: 0;
				margin-right: 0;
				.maxi-tabs-control__button {
					padding: 8px;
					margin-right: 5px;
					border: 1.5px solid var(--maxi-grey-1-color) !important;
					border-radius: 4px;
					font-weight: 400;
				}

				.maxi-tabs-control__button[aria-pressed='true'] {
					background-color: var(--maxi-light-blue-2-color) !important;
					border-color: var(--maxi-light-blue-2-color) !important;
					font-weight: 700;
				}
			}
			.maxi-tabs-content {
				padding-top: 10px;
			}
		}
	}
	.maxi-scroll-combinations-select .maxi-base-control__field {
		flex-direction: column;
		align-items: flex-start;
	}
	.components-button {
		box-shadow: none;
		transition: all 0.5s;

		&:hover:enabled {
			opacity: 0.8;
		}
	}
	.maxi-tab-content {
		.maxi-base-control {
			.maxi-select-control__input {
				flex: 2;
			}
		}
	}
}

